--- a/src/main/resources/templates/admin/head.html
+++ b/src/main/resources/templates/admin/head.html
@@ -2,8 +2,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Dashboard - SB Admin</title>
-
+  <link rel="shortcut icon" th:href="@{/images/movieLogo.jpg}">
   <!-- Styles -->
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
   <link th:href="@{/admin/css/styles.css}" rel="stylesheet" />
@@ -40,5 +39,4 @@
   <!-- jQuery Timepicker Addon -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.13.18/jquery.timepicker.min.js"></script>
 
-</head>
 </head>
