--- a/src/main/resources/templates/admin/review/list.html
+++ b/src/main/resources/templates/admin/review/list.html
@@ -122,11 +122,8 @@
 </style>
     <head>
         <meta charset="utf-8" />
-        <title>Admin Page - Review</title>
+        <title>Review List | MovieMates Administor Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta content="A fully responsive admin theme which can be used to build CRM, CMS,ERP etc." name="description" />
-        <meta content="Techzaa" name="author" />
-
         <!-- App favicon -->
         <link rel="shortcut icon" th:href="@{/admin/assets/images/favicon.ico}">
 
