--- a/src/main/resources/templates/admin/theater/register.html
+++ b/src/main/resources/templates/admin/theater/register.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Theater Register</title>
+  <title>Theater Register | MovieMates Administor Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="A fully responsive admin theme which can be used to build CRM, CMS,ERP etc." name="description" />
   <meta content="Techzaa" name="author" />
 
   <!-- App favicon -->
-  <link rel="shortcut icon" th:href="@{/admin/assets/images/favicon.ico}">
+  <link rel="shortcut icon" th:href="@{/images/movieLogo.jpg}">
 
   <!-- Theme Config Js -->
   <script th:src="@{/admin/assets/js/config.js}"></script>
