--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
                         <a th:href="@{/api/user/mypage/{id}(id=${session.loginUser.id})}" style="color: white; margin-right: 15px;">Mypage</a>
                         <span class="divider"></span>
                         <div class="header_ticket" style="margin-left: 15px;">
-                            <a th:href="@{/logout}" class="order_btn" style="margin-right: 15px;">Logout</a>
+                            <a th:href="@{/logout}" style="margin-right: 15px;">Logout</a>
                         </div>
                         <span class="divider"></span>
                     </div>
