--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -120,7 +120,7 @@
             gender: gender,
             email: email,
             password: password,
-            role: 'USER'
+            role: 'ROLE_USER'
         };
 
 
