20241102 1215 - aws key 분리 후

--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -101,7 +101,7 @@
     <header id="header" class="menu-top-left">
         <div class="container" style="display: flex; align-items: center; justify-content: space-between;">
             <div class="logo-container" style="flex: 1;">
-                <a href="/" id="logo" title="Moviemates" class="logo-image"
+                <a th:href="@{/}" id="logo" title="Moviemates" class="logo-image"
                    th:data-bg-image="@{/images/movieLogo.jpg}">Moviemates</a>
             </div>
             <div class="menu-container" style="display: flex; align-items: center; justify-content: flex-end; gap: 15px; flex: 1;">
