--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,9 +14,11 @@
             display: flex;
             align-items: center;
         }
+
         #header a {
             color: white;
         }
+
         #header .header_author {
             color: white;
             display: flex;
@@ -49,14 +51,16 @@
                     <a href="/" id="logo" title="Moviemates" class="logo-image"
                        th:data-bg-image="@{/images/movieLogo.jpg}">Moviemates</a>
                 </div>
-                <div class="col-md-6 col-sm-6 col-xs-8 phl0" style="display: flex; align-items: center; justify-content: flex-end;">
+                <div class="col-md-6 col-sm-6 col-xs-8 phl0"
+                     style="display: flex; align-items: center; justify-content: flex-end;">
                     <div th:if="${session.loginUser != null}" style="display: flex; align-items: center;">
                         <div class="header_author" style="margin-right: 15px;">
                             <span th:text="${userData.nickname + '님'}" style="color: white;">User</span>
                             <img th:src="${userData.profileImageUrl}" class="user" alt="user"
                                  style="width: 40px; height: 40px; border-radius: 50%; margin-left: 5px;">
                         </div>
-                        <a th:href="@{/api/user/mypage/{id}(id=${session.loginUser.id})}" style="color: white; margin-right: 15px;">Mypage</a>
+                        <a th:href="@{/api/user/mypage/{id}(id=${session.loginUser.id})}"
+                           style="color: white; margin-right: 15px;">Mypage</a>
                         <span class="divider"></span>
                         <div class="header_ticket" style="margin-left: 15px;">
                             <a th:href="@{/logout}" style="margin-right: 15px;">Logout</a>
