--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -409,6 +409,7 @@
 <!-- Scripts -->
 <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/packages.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/scripts.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/scripts.js}"></script>
 
 <!-- Google Maps API -->
